refactor(album):完成查询专辑分布式锁改造;